--- a/src/NevermindEngine/DrawEngine/meson.build
+++ b/src/NevermindEngine/DrawEngine/meson.build
@@ -1,8 +1,7 @@
 draw_engine_source = [
-    'DrawEngine.hpp',
-    'Drawable/Drawable.hpp',
+    'DrawEngine.cpp',
     'Drawable/Drawable.cpp'
 ]
 
-draw_engine_lib = shared_library('draw_engine', draw_engine_source)
+draw_engine_lib = shared_library('draw_engine', draw_engine_source, include_directories : headers)
 
