--- a/src/meson.build
+++ b/src/meson.build
@@ -4,7 +4,7 @@ engine_source = [
     'main.cpp'
 ]
 
-engine_bin = executable('neverming',
+engine_bin = executable('nevermind',
     sources : engine_source,
     link_with : draw_engine_lib,
     include_directories : headers
