--- a/meson.build
+++ b/meson.build
@@ -1,4 +1,4 @@
-project('nevermind_engine', ['cpp'])
+project('nevermind_engine', ['cpp'], default_options : ['c_std=c20', 'cpp_std=c++20'])
 
 headers = include_directories('include/')
 
