Work with physics and meson

--- a/src/NevermindEngine/DrawEngine/meson.build
+++ b/src/NevermindEngine/DrawEngine/meson.build
@@ -2,6 +2,6 @@ draw_engine_source = [
     'DrawEngine.cpp',
 ]
 
-draw_engine_lib = shared_library('draw_engine', draw_engine_source, 
+draw_engine_lib = shared_library('draw', draw_engine_source, 
     link_with : nevermind_core, include_directories : headers)
 
